Refactor landing for password reset

--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -28,6 +28,7 @@
 
 .forgot-my-pw-label {
   margin-top: 2rem;
+  margin-bottom: 0;
   font-size: 1.2rem;
 }
 
@@ -47,8 +48,9 @@
 }
 
 .send-new-pw-btn,
-.backup-from-forgot-pw {
-  margin: 1rem 0;
+.backup-from-forgot-pw,
+.have-reset-token {
+  margin: 0;
   font-family: "chronotype";
   font-size: 1.1rem;
   padding-top: 4px;
@@ -56,7 +58,7 @@
 }
 
 .backup-from-forgot-pw {
-  margin-top: 11rem;
+  margin-top: 8rem;
 }
 .forgot-pw-lock-icon {
   position: absolute;
@@ -75,12 +77,38 @@
   right: 0;
   left: 500px;
   margin: auto;
-  top: 137px;
+  top: 156px;
   transition: 0.3s;
   width: 341px;
 }
 
 .pw-sent-success.true,
 .pw-sent-failure.true {
+  left: 0;
+}
+
+.have-reset-token {
+  margin: 2.5rem auto;
+  display: block;
+  background: none;
+  border: none;
+}
+
+.success-message-reset,
+.fail-message-reset,
+.no-pw-match-reset {
+  position: absolute;
+  font-family: "chronotype";
+  font-size: 1.1rem;
+  left: 400px;
+  right: 0;
+  margin: auto;
+  transition: 0.5s;
+  width: 300px;
+}
+
+.success-message-reset.true,
+.fail-message-reset.true,
+.no-pw-match-reset.true {
   left: 0;
 }
