Refactor ChangePassword an EditProfile to be user agnostic

--- a/src/components/ChangePassword/ChangePassword.css
+++ b/src/components/ChangePassword/ChangePassword.css
@@ -1,18 +1,24 @@
 .change-password-form {
+  position: relative;
+  overflow: hidden;
+}
+.student.change-password-form {
+  height: 180px;
+  padding-bottom: 20px;
   display: grid;
   grid-template-columns: 130px 1fr;
   animation: account-subsection-fade-in 0.3s linear;
 }
 
-.change-password-form *:focus {
+.student.change-password-form *:focus {
   outline: none;
 }
 
-.change-password-form button:active {
+.student.change-password-form button:active {
   box-shadow: none;
 }
 
-.change-password-form button {
+.student.change-password-form button {
   grid-column: 1/3;
   width: 150px;
   height: 23px;
@@ -24,7 +30,7 @@
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
-.change-password-form input {
+.student.change-password-form input {
   font-family: "chronotype";
   font-size: 1rem;
   height: 18px;
@@ -35,26 +41,88 @@
   padding-left: 8px;
 }
 
-.change-password-form input:placeholder {
+.student.change-password-form input:placeholder {
   color: #333;
 }
 
-.change-password-form p {
+.student.change-password-form p {
   padding-top: 1.3rem;
   margin: 0;
 }
 
 @media (max-width: 770px) {
-  .change-password-form {
+  .student.change-password-form {
     padding-left: 1rem;
     display: block;
   }
 
-  .change-password-form input {
+  .student.change-password-form input {
     margin: 0;
   }
 
-  .change-password-form input {
+  .student.change-password-form input {
     width: 140px;
   }
+}
+
+/* TEACHER ACCOUNT  */
+
+/* TEACHER PROFILE  */
+
+.teacher.change-password {
+  width: 350px;
+  margin: auto;
+}
+
+.teacher.change-password-form {
+  padding-bottom: 2rem;
+}
+
+.teacher.password-component-text {
+  display: inline-block;
+  margin-right: 0.5rem;
+  margin-bottom: 0;
+  width: 110px;
+}
+
+.teacher.change-password input {
+  width: 200px;
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+
+.teacher.change-password button {
+  margin-top: 1.5rem;
+  width: 130px;
+}
+
+/* SUCCESS AND ERROR MESSAGING  */
+
+.password-match-warning,
+.password-incorrect-warning,
+.password-change-success {
+  text-align: center;
+  position: absolute;
+  width: 150px;
+  top: 150px;
+  left: 800px;
+  margin: auto;
+}
+
+.password-match-warning.true,
+.password-incorrect-warning.true,
+.password-change-success.true {
+  left: 162px;
+}
+
+.teacher.password-match-warning,
+.teacher.password-incorrect-warning,
+.teacher.password-change-success {
+  top: 180px;
+}
+
+.teacher.password-match-warning.true,
+.teacher.password-incorrect-warning.true,
+.teacher.password-change-success.true {
+  left: 102px;
 }
