Add dynamic backgrounds

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -10,15 +10,49 @@
 }
 
 .game-area-wrapper {
-  background: url(./images/snow-bg-big.png);
+  background: url(./images/forestpath-final.png);
   max-width: 2100px;
   height: 1200px;
   background-repeat: no-repeat;
   background-size: cover;
   image-rendering: pixelated;
+  background-position: center;
   position: relative;
   margin: auto;
   overflow: hidden;
+  transition: 0.4s;
+}
+
+.game-area-wrapper.one {
+  background: url(./images/forestpath-final.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+  background-position: center;
+}
+
+.game-area-wrapper.two {
+  background: url(./images/underwater-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+  background-position: center;
+}
+
+.game-area-wrapper.three {
+  background: url(./images/snow-bg-big.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+  background-position: center;
+}
+
+.game-area-wrapper.four {
+  background: url(./images/castle-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+  background-position: center;
 }
 
 .game-header {
