--- a/src/components/EditAvatar/EditAvatar.css
+++ b/src/components/EditAvatar/EditAvatar.css
@@ -139,6 +139,14 @@
   height: 62px;
 }
 
+.avatar-editor-current.thirteen {
+  background: url(../Game/pcs/char13/stand.png);
+  image-rendering: pixelated;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 35px;
+}
+
 .avatar-left-arrow:hover,
 .avatar-right-arrow:hover {
   cursor: pointer;
