--- a/src/components/StudentDash/StudentDash.css
+++ b/src/components/StudentDash/StudentDash.css
@@ -189,6 +189,14 @@
   background-repeat: no-repeat;
 }
 
+.student-dash-avatar.thirteen {
+  background: url(../Game/pcs/char13/stand.png);
+  image-rendering: pixelated;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 35px;
+}
+
 .hearts-and-timer {
   display: grid;
   grid-template-columns: 1fr 300px 1fr;
