--- a/src/components/EditAvatar/EditAvatar.css
+++ b/src/components/EditAvatar/EditAvatar.css
@@ -147,6 +147,14 @@
   width: 35px;
 }
 
+.avatar-editor-current.fourteen {
+  background: url(../Game/pcs/char14/stand.png);
+  image-rendering: pixelated;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 33px;
+}
+
 .avatar-left-arrow:hover,
 .avatar-right-arrow:hover {
   cursor: pointer;
