--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -193,6 +193,23 @@
   width: 33px;
 }
 
+.header-avatar.thirteen {
+  background: url(./pcs/char13/stand.png);
+  image-rendering: pixelated;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 34px;
+  height: 59px;
+}
+
+.header-avatar.fourteen {
+  background: url(./pcs/char14/stand.png);
+  image-rendering: pixelated;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 35px;
+}
+
 .hearts-and-timer {
   display: grid;
   grid-template-columns: 1fr 300px 1fr;
