--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -57,6 +57,21 @@
   border-radius: 1px;
 }
 
+.send-new-pw-btn,
+.backup-from-forgot-pw {
+  box-shadow: 2px 2px 2px rgba(0, 0, 0 0.5);
+}
+
+.send-new-pw-btn:active,
+.backup-from-forgot-pw:active {
+  box-shadow: none;
+}
+
+.send-new-pw-btn:focus,
+.backup-from-forgot-pw:focus {
+  outline: none;
+}
+
 .backup-from-forgot-pw {
   margin-top: 8rem;
 }
