--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -270,6 +270,19 @@
   background: #e3e8d9;
   z-index: 4000;
   position: relative;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.kickoff-btn:active {
+  box-shadow: none;
+}
+
+.kickoff-btn:focus {
+  outline: none;
+}
+
+.kickoff-btn:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 700px) {
