--- a/src/components/GameUserModal/GameUserModal.css
+++ b/src/components/GameUserModal/GameUserModal.css
@@ -17,23 +17,38 @@
 }
 
 .game-user-modal button {
+  padding-top: 3px;
   position: absolute;
   font-family: "chronotype";
   display: block;
   font-size: 1.3rem;
   margin: auto;
-  border-radius: 10px;
+  background: #f2f2f2;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  border: 1px solid #333;
+}
+
+.game-user-modal button:focus {
+  outline: none;
+}
+
+.game-user-modal button:active {
+  box-shadow: none;
+}
+
+.game-user-modal button:hover {
+  cursor: pointer;
 }
 
 .exit-game-button {
-  bottom: 20px;
+  bottom: 30px;
   width: 50px;
   left: 0;
   right: 0;
 }
 
 .reset-game-button {
-  bottom: 50px;
+  bottom: 60px;
   width: 60px;
   left: 0;
   right: 0;
