--- a/src/components/StudentClassView/StudentClassView.css
+++ b/src/components/StudentClassView/StudentClassView.css
@@ -33,6 +33,9 @@
   background: #4776bb;
   box-shadow: 2px 2px 2px#000;
   border: none;
+  font-family: "chronotype";
+  font-size: 1.3rem;
+  padding-top: 4px;
 }
 
 .class-view-back-btn:hover {
@@ -58,7 +61,7 @@
 
 .student-class-view-teacher-name {
   margin-top: 0;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
   font-size: 1.4rem;
 }
 
@@ -72,6 +75,7 @@
   font-size: 1.8rem;
   text-align: center;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 .class-view-fastest-time {
