--- a/src/components/PlayerEffect/PlayerEffect.css
+++ b/src/components/PlayerEffect/PlayerEffect.css
@@ -1,288 +1,19 @@
 .player-effect {
-  animation: player-claw linear 1s;
-  -webkit-animation: player-claw linear 1s;
-  -moz-animation: player-claw linear 1s;
-  -o-animation: player-claw linear 1s;
+  animation: player-claw steps(8) 1s;
+  -webkit-animation: player-claw steps(8) 1s;
+  -moz-animation: player-claw steps(8) 1s;
+  -o-animation: player-claw steps(8) 1s;
 
-  width: 200px;
-  height: 200px;
+  width: 192px;
+  height: 192px;
   position: absolute;
   top: 40px;
   left: 0px;
+  background-size: 1536px 192px;
 }
 
 @keyframes player-claw {
-  0% {
-    background-image: none;
-  }
-  50% {
-    background-image: none;
-  }
-  50.01% {
-    background-image: url("./effects/claw/claw_1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  60% {
-    background-image: url("./effects/claw/claw_1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  60.01% {
-    background-image: url("./effects/claw/claw_2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  70% {
-    background-image: url("./effects/claw/claw_2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  70.01% {
-    background-image: url("./effects/claw/claw_3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80% {
-    background-image: url("./effects/claw/claw_3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80.01% {
-    background-image: url("./effects/claw/claw_4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  90% {
-    background-image: url("./effects/claw/claw_4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  90.01% {
-    background-image: url("./effects/claw/claw_5.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
   100% {
-    background-image: url("./effects/claw/claw_5.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-}
-
-@-webkit-keyframes player-claw {
-  0% {
-    background-image: none;
-  }
-  50% {
-    background-image: none;
-  }
-  50.01% {
-    background-image: url("./effects/claw/claw_1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  60% {
-    background-image: url("./effects/claw/claw_1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  60.01% {
-    background-image: url("./effects/claw/claw_2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  70% {
-    background-image: url("./effects/claw/claw_2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  70.01% {
-    background-image: url("./effects/claw/claw_3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80% {
-    background-image: url("./effects/claw/claw_3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80.01% {
-    background-image: url("./effects/claw/claw_4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  90% {
-    background-image: url("./effects/claw/claw_4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  90.01% {
-    background-image: url("./effects/claw/claw_5.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  100% {
-    background-image: url("./effects/claw/claw_5.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-}
-
-@-moz-keyframes player-claw {
-  0% {
-    background-image: none;
-  }
-  50% {
-    background-image: none;
-  }
-  50.01% {
-    background-image: url("./effects/claw/claw_1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  60% {
-    background-image: url("./effects/claw/claw_1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  60.01% {
-    background-image: url("./effects/claw/claw_2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  70% {
-    background-image: url("./effects/claw/claw_2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  70.01% {
-    background-image: url("./effects/claw/claw_3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80% {
-    background-image: url("./effects/claw/claw_3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80.01% {
-    background-image: url("./effects/claw/claw_4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  90% {
-    background-image: url("./effects/claw/claw_4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  90.01% {
-    background-image: url("./effects/claw/claw_5.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  100% {
-    background-image: url("./effects/claw/claw_5.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-}
-
-@-o-keyframes player-claw {
-  0% {
-    background-image: none;
-  }
-  50% {
-    background-image: none;
-  }
-  50.01% {
-    background-image: url("./effects/claw/claw_1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  60% {
-    background-image: url("./effects/claw/claw_1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  60.01% {
-    background-image: url("./effects/claw/claw_2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  70% {
-    background-image: url("./effects/claw/claw_2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  70.01% {
-    background-image: url("./effects/claw/claw_3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80% {
-    background-image: url("./effects/claw/claw_3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80.01% {
-    background-image: url("./effects/claw/claw_4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  90% {
-    background-image: url("./effects/claw/claw_4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  90.01% {
-    background-image: url("./effects/claw/claw_5.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  100% {
-    background-image: url("./effects/claw/claw_5.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    image-rendering: pixelated;
+    background-position: -1536px;
   }
 }
